# QE-Kit

./: .gitignore  .~lock.roadmap.odt#  CITATION.cff  DOCUMENTATION  DOCUMENTATION.docx  README.md  pyproject.toml  qekit.py  roadmap.odt  setup_env.sh
modules/: __init__.py  bands_gen.py  bands_proc.py  build_pseudo_lib.py  bz_plotter.py  epc_processor.py  fs_gen.py  kpath_gen.py  nscf_gen.py  optical_gen.py  optical_proc.py  optimized.py  pdos_gen.py  pdos_proc.py  phonon_gen.py  phonon_proc.py  pseudo_select.py  scf_gen.py  structure2in.py  thermopw_gen.py  thermopw_proc.py  vcrelax_gen.py  xrd_plotter.py
utils/: __init__.py  check_strain.py  citations.py  config_manager.py  help_manager.py  ht_phonon.sh  plot-overlay.sh  plot-subplots.sh  qe_xml_parser.py  symmetric_mat.py
