[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qekit"
version = "0.2.2"
description = "A comprehensive pre- and post-processing toolkit for Quantum ESPRESSO"
readme = "README.md"
authors = [{ name = "Farhan Noor", email = "s-2019418104@phy.du.ac.bd" }]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "questionary",
    "numpy",
    "pandas",
    "spglib",
    "seekpath",
    "ase"
]

[project.scripts]
qekit = "qekit:main"  # This tells pipx to run the 'main' function inside qekit.py

[tool.setuptools]
py-modules = ["qekit"]  # This tells setuptools that qekit.py is a top-level module

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "utils*"]
