[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qekit"

version = "0.3.3"  # Bumped for the HT & Visualization update
description = "A comprehensive pre- and post-processing toolkit for Quantum ESPRESSO"
readme = "README.md"
authors = [{ name = "Farhan Noor", email = "s-2019418104@phy.du.ac.bd" }]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "questionary",
    "numpy",
    "pandas",
    "spglib",
    "seekpath",
    "ase",
    "matplotlib" # Recommended if you eventually transition from Gnuplot to Python plots
]

[project.scripts]
qekit = "qekit:main"

[tool.setuptools]
py-modules = ["qekit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "utils*"]

# NEW: This ensures your .sh scripts in utils/ are actually bundled in the package
[tool.setuptools.package-data]
"utils" = ["*.sh"]
