[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qekit"

version = "0.3.10"
description = "A comprehensive pre- and post-processing toolkit for Quantum ESPRESSO"
readme = "README.md"
authors = [{ name = "Farhan Noor", email = "s-2019418104@phy.du.ac.bd" }]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "questionary",
    "numpy",
    "pandas",
    "scipy",
    "spglib",
    "seekpath",
    "ase",
    "matplotlib",
    "pymatgen",
    "scikit-image"
]

[project.scripts]
qekit = "qekit:main"

[tool.setuptools]
py-modules = ["qekit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "utils*"]

# NEW: This ensures your .sh scripts in utils/ are actually bundled in the package
[tool.setuptools.package-data]
"utils" = ["*.sh"]
